--- a/kern/Makefile
+++ b/kern/Makefile
@@ -13,6 +13,8 @@ x15_SOURCES-y += \
         kern/intr.c \
         kern/kernel.c \
         kern/kmem.c \
+        kern/latomic.c \
+        kern/llsync.c \
         kern/log.c \
         kern/mutex.c \
         kern/panic.c \
